--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
+
+:root {
+  --marigold: #ffc001;
+
+  --max-width: 1440px
+}
+
+html {
+  font-size: 16px;
+
+  /* font-family: "sans-serif"; */
+  font-family: 'Open Sans', sans-serif;
+  color: white;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  background-color: black;
+}
+
+a {
+  font-weight: 700;
+
+}
+
+button {
+  cursor: pointer;
 }
