--- a/src/components/marquee/marquee.css
+++ b/src/components/marquee/marquee.css
@@ -21,7 +21,7 @@
     padding: 0 9%;
 
     animation-name: fade-in;
-    animation-duration: 2s;
+    animation-duration: 5s;
     animation-iteration-count: 1;
 }
 
@@ -33,6 +33,8 @@
     max-width: var(--max-width);
     min-height: 100vh;
     margin: 0 auto;
+
+    opacity: 1;
 }
 
 .main-content {
@@ -54,10 +56,7 @@
     font-size: 5.25rem;
     letter-spacing: -2.2px;
 
-    /* width: 51.9%; */
     padding: 0;
-    /* margin-right: 14.5%; */
-    /* margin: 0 auto 0 0; */
     margin: 0;
 
     grid-column: 1;
@@ -71,7 +70,6 @@
     line-height: 1.625rem;
     letter-spacing: 0;
 
-    /* width: 30.5%; */
     grid-column: 2;
     grid-row: 1;
 }
@@ -91,7 +89,6 @@
     
     width: 100%;
     height: 22.1vh;
-    /* padding: 0 5%; */
     padding-left: 6.5%;
     bottom: 0;
     left: 0;
@@ -110,14 +107,12 @@
     align-items: center;
     background-color: transparent;
     
-    /* font: 600 0.688rem / 1.25rem "Open Sans"; */
     font-weight: 600;
     font-size: 0.688rem;
     line-height: 1.25rem;
     letter-spacing: 1px;
     
     
-    /* border: none; */
     border-top: none;
     border-right: none;
     border-bottom: 1px solid transparent;
@@ -129,10 +124,8 @@
 }
 
 .cta-btn:focus {
-    /* outline: 1px solid rgba(128, 128, 128, 0.192); */
     outline: none;
     border-bottom: 1px solid black;
-    /* text-decoration: underline; */
 }
 
 .cta-btn:hover {
@@ -148,7 +141,6 @@
 
     transform: scale(1.3, 1);
     height: 1.5vh;
-    /* width: 10px; */
     padding-left: 5px;
 
     transition: 0.2s ease-out transform;
@@ -176,7 +168,6 @@
     
     .arrow {
         padding-left: 0px;
-        /* padding-right: 10px; */
     }
     
 }
